Free up Alt+G shortcut on Mac OS family. Fix compiler error for a test and use PlatformUI.getWorkbench() instead of internal workbench

--- a/org.grails.ide.eclipse.editor.groovy/plugin.xml
+++ b/org.grails.ide.eclipse.editor.groovy/plugin.xml
@@ -101,52 +101,13 @@
             contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M3+G T"/>
+      <sequenceModifier
+            find="M3+G"
+            platforms="cocoa,carbon"
+            replace="M3+M4+G">
+      </sequenceModifier>
       <!-- Now disable all of the M3+G commands for Swiss German since that conflicts with '@' -->      
-      <key
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            locale="de_CH"
-            sequence="M3+G C"/>
-      <key
-            locale="de_CH"
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M3+G D"/>
-      <key
-            locale="de_CH"
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M3+G S"/>
-      <key
-            locale="de_CH"
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M3+G T"/>
       <!-- Reenable commands using M1+M3+G for Swiss German -->      
-      <key
-            locale="de_CH"
-            commandId="org.grails.ide.eclipse.editor.groovy.controllerCommand"
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M1+M3+G C"/>
-      <key
-            locale="de_CH"
-            commandId="org.grails.ide.eclipse.editor.groovy.domainCommand"
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M1+M3+G D"/>
-      <key
-            locale="de_CH"
-            commandId="org.grails.ide.eclipse.editor.groovy.serviceCommand"
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M1+M3+G S"/>
-      <key
-            locale="de_CH"
-            commandId="org.grails.ide.eclipse.editor.groovy.tagLibCommand"
-            contextId="org.codehaus.groovy.eclipse.editor.groovyEditorScope"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M1+M3+G T"/>
    </extension>
     <extension
           point="org.eclipse.ui.commands">
